# Lightrag_test_app

./: .coverage  .coverage.Mac.2553.XvASnlGx  .cursorrules  .gitignore  .scratchpad  CLI_ONLY_GUIDE.md  COMPOSER_PROMPT.md  Deep-learning-based.txt  Focus.md  Graph_query.py  README.md  REFACTORING.md  TODO.md  cursor_tool_for_writing_cursorrules.txt  drift_helper_functions.py  lightrag_architecture.drawio  lightrag_helpers.py  lightrag_init.py  output.txt  pdf_to_md.py  project.md  pyproject.toml  requirements.txt  run_app.sh  start.py  streamlit_app.py  test_lightrag.py
.ai/status/: 2024-12-21-01.md  2024-12-23-02.md  2024-12-24-03.md  2024-12-25-01.md  2024-12-26-02.md  2025-01-02-23.md  2025-01-05-23.md  end-session.md  start-session.md
.streamlit/: config.toml
cli/: __init__.py  main.py
cli/commands/: __init__.py  metadata_cmd.py  pdf_cmd.py  search_cmd.py  store_cmd.py
cli/core/: config.py  errors.py  progress.py  store_manager.py
marker_config_test/: Marker_config_test.py
notebooks/design-docs/: Streamlit_Chat_element.txt
pages/: 1_Search.py  1_🌐_Global_search.py  1_🔍_Search.py  2_🔍_Local_search.py  3_🔎_Drift_search.py  Academic.py  Home.py  Manage.py  Search.py  __init__.py
pdfs/: 1606.01865v2.txt  8106_Irregular_Multivariate_Ti.txt  Invidualized_6MP_increments_in_consolidation_2018_Tulstrup_M.txt  Pharmacokinetic–pharmacodynamic modeling of maintenance therapy for childhood acute lymphoblastic leukemia.txt  Time Series Prediction Using Deep Learning Methods in Healthcare.txt
preprocessing/: Preprocessing_convert files to .txt with markdown and comments.py
responses/: response_20241222_230511.txt  response_20241223_042839.txt
src/: academic_metadata.py  academic_response_processor.py  base_metadata.py  citation_formatter.py  citation_metadata.py  config_manager.py  document_validator.py  equation_extractor.py  equation_metadata.py  file_manager.py  file_processor.py  global_helper_functions.py  hello.py  lightrag_helpers.py  lightrag_init.py  local_helper_functions.py  metadata_consolidator.py  metadata_extractor.py  pdf_converter.py  preprocessing_functions.py
tests/: conftest.py  create_test_pdf.py  test_app_marker.py  test_arxiv_metadata.py  test_citation_formatter.py  test_citation_processor.py  test_config_manager.py  test_file_processor.py  test_marker.py  test_metadata.py  test_pdf_converter.py  test_pdf_processing.py  test_streamlit_app.py
tests/cli/: test_metadata_cmd.py  test_pdf_cmd.py  test_search_cmd.py  test_store_cmd.py
tests/data/: sample.md
