[project]
name = "lightrag-test"
version = "0.1.0"
description = "A Streamlit-based LightRAG application for academic research."
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    # Core packages
    "streamlit",
    "watchdog",
    "termcolor",
    "networkx",
    "openai",
    "pandas",
    "numpy",
    "plotly",
    "marker-pdf>=1.2.3",    
    "matplotlib",
    "requests",
    "stqdm",
    "uv",
    "xxhash",
    "pyvis",
    "aioboto3",
    "ruff",
    "ollama",
    "tiktoken",
    "nano-vectordb",
    
    # PDF processing
    "pymupdf",  # PDF processing library
    "PyPDF2",
    "pdf2doi",
    "crossrefapi",
    "scholarly",
    
    # RAG packages
    "lightrag-hku>=1.0.9",
    
    # Development
    "python-dotenv",
    "python-docx",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
