[project]
name = "lightrag"
version = "0.1.0"
description = "LightRAG - A lightweight RAG implementation"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    # Core packages
    "streamlit",
    "streamlit-navigation-bar",
    "watchdog",
    "termcolor",
    "networkx",
    "openai",
    "pandas",
    "numpy",
    "plotly",
    "marker-pdf>=1.2.3",    
    "matplotlib",
    "requests",
    "stqdm",
    "uv",
    "xxhash",
    "pyvis",
    "aioboto3",
    "ruff",
    "ollama",
    "tiktoken",
    "nano-vectordb",
    
    # PDF processing
    "PyMuPDF",
    "PyPDF2",
    "pdf2doi",
    "crossrefapi",
    "scholarly",
    
    # RAG packages
    "lightrag-hku>=1.1.0",
    
    # Development
    "python-dotenv",
    "python-docx",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
