[project]
name = "lightrag"
version = "0.1.0"
description = "LightRAG - A lightweight RAG implementation"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    # Core packages
    "streamlit",
    "streamlit-community-navigation-bar",
    "watchdog",
    "termcolor",
    "networkx",
    "openai",
    "pandas",
    "numpy",
    "plotly",
    "marker-pdf>=1.2.3",    
    "matplotlib",
    "requests",
    "stqdm",
    "uv",
    "xxhash",
    "pyvis",
    "aioboto3",
    "ruff",
    "ollama",
    "tiktoken",
    "nano-vectordb",
    
    # PDF processing
    "PyMuPDF",
    "PyPDF2",
    "pdf2doi",
    "crossrefapi",
    "scholarly",
    "arxiv>=2.1.3",
    
    # RAG packages
    "lightrag-hku>=1.1.1",
    
    # Development
    "python-dotenv",
    "python-docx",
    "pytest",
    "marker-pdf",  # For PDF text extraction with semantic structure
    "termcolor",
    "habanero",  # For Crossref API
    "scholarly",  # For Google Scholar lookups
    "beautifulsoup4",
    "lxml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
